--- a/scala.project/src/main/resources/org/netbeans/modules/scala/project/Bundle.properties
+++ b/scala.project/src/main/resources/org/netbeans/modules/scala/project/Bundle.properties
@@ -78,6 +78,7 @@ ACTION_run.single=Run File
 ACTION_debug=Debug Project
 ACTION_debug.single=Debug File
 ACTION_debug.stepinto=Debug Project
+ACTION_scalatest.run.file=Run ScalaTest File
 CTL_BrokenPlatform_Close=Close
 AD_BrokenPlatform_Close=N/A
 MSG_BrokenPlatform_Title=Broken Platform Reference
@@ -103,3 +104,6 @@ LibrarySourceGroup_DisplayName=Shared Libraries
 LBL_RunFile_Action=Run File
 LBL_DebugFile_Action=Debug File
 LBL_DebugTestFile_Action=Debug Test File
+LBL_DebugScalaTestFile_Action=Debug ScalaTest File
+
+LBL_Select_ScalaTest_File=Please select a scala source file that contains ScalaTest suite.
